<package>
    <name>zed_cpu_ros</name>
    <version>0.0.1</version>
    <description>
      A simple zed camera driver which only use CPU and only publish left and right raw images.
    </description>
    <author>Di Zeng</author>
    <author>di.zeng@transcendrobotics.com</author>
    <maintainer email="di.zeng@transcendrobotics.com">Di Zeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <!-- <build_depend>eigen3</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>camera_info_manager</run_depend>

    <export>
    </export>

</package>


